# zephyr-cmake-cycle

./: CMakeLists.txt  app.overlay  prj.conf  prj_lf.conf
core/: CMakeLists.txt  test.c
